<resources>
    <string name="app_name">Typhoon</string>
    <string name="usuario">No. Empleado / Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo electrónico</string>
    <string name="registrarse">Registrarse</string>
    <string name="validar">Validar</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="confirmarcontrasena">Confirmar contraseña</string>
    <string name="usuarioExterno"><u>¿Eres usuario externo?</u></string>
    <string name="restablecerContrasena">Recuperar contraseña</string>
    <string name="folios">Folios</string>
    <string name="enviar">Enviar</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="folio_tag">Folio:</string>
    <string name="inicio_tag">Inicio:</string>
    <string name="fin_tag">Fin:</string>
    <string name="titulo_rubro_tag">Rubro</string>
    <string name="cumplen_tag">Cumplen</string>
    <string name="no_cumplen_tag">No cumplen</string>
    <string name="total_tag">Total</string>
    <string name="aplica_tag">Aplica</string>
    <string name="no_aplica_tag">No aplica</string>
    <string name="anio_tag">Año</string>
    <string name="mes_tag">Mes</string>
    <string name="buscar_folio_hint">Folio</string>
    <string name="buscar_tag">Buscar</string>
    <string name="agregar_evidencias_tag">Agregar evidencias</string>
    <string name="cerrar_sesion_menu">Cerrar sesión</string>
    <string name="usuario_externo_tag">Usuario externo</string>
    <string name="actualizar_cat_logos_tag">Actualizar catálogos</string>
    <string name="sincronizar_tag">¿Desea sincronizar este checklist?</string>
    <string name="cancelar_tag">Cancelar</string>
    <string name="sincronizar_button_tag">Sincronizar</string>
    <string name="aceptar_tag">Aceptar</string>
    <string name="bienvenido_tag">¡Bienvenido</string>
    <string name="simbolo_exclamacion_tag">!</string>
    <string name="nueva_instalacion_tag">Nueva instalación</string>
    <string name="mes_revision_tag">Mes revisión:</string>
    <string name="estatus_tag">Estatus:</string>
    <string name="motivo_de_rechazo_tag">Motivo de rechazo:</string>
    <string name="historico_tag">Histórico</string>
    <string name="estatus_general_tag">Estatus general:</string>
    <string name="etapa_tag">Etapa:</string>
    <string name="historial_de_validaciones_y_rechazos_tag">Historial de validaciones y rechazos:</string>
    <string name="cerrar_tag">Cerrar</string>
    <string name="anexos_tag">Anexos</string>
    <string name="por_cargar_tag">Por cargar</string>
    <string name="ok_tag">OK</string>
    <string name="actualizar_revisiones_menu">Actualizar revisiones</string>
    <string name="barco_tag">Barco:</string>
    <string name="localizacion_tag">Localización:</string>
    <string name="etapa_actual_tag">Etapa actual:</string>
    <string name="usuario_interno">Usuario Interno</string>
    <string name="ingresar">Ingresar</string>

<!-- produccion-->
    <string name="client_text">Ldl7EdonE1tcDdZTMbPF/w==</string>
    <string name="client_id">70bf3ebc-14db-4a16-8fa2-47e84e187b4f</string>
    <string name="client">uLQT0IMs0u650uUpSTMhPVN8rmchYmSo7vAqvWWGqHE8UJHApagGIUR2WdERQ4l3y9B0I7Y-VeM-ZY51oxqfnA</string>
    <string name="scope">Typhoon</string>
    <string name="redirect_uri">typhoon://login</string>
    <string name="response_type">token</string>
    <string name="acr_values">gs/customEnrolamiento/uri</string>

<!--    desarrollo-->
    <!--  <string name="client_text">Ldl7EdonE1tcDdZTMbPF/w==</string>
     <string name="client_id">550f7973-3be1-401e-bc15-bfa941a20979</string>
     <string name="client">SqGCZ8oiD10Y6LBnBND-iTHrKsmiZ3Pg7MoKqB_sRSoS6jJy23hmTDzOLdfmtBAIi3DSgnrP_Tz63Erd0kCCn</string>
     <string name="scope">Typhoon</string>
     <string name="redirect_uri">typhoon://login</string>
     <string name="response_type">token</string>
     <string name="acr_values">gs/doblefactoridm/uri</string>
     -->
    <string name="por_cargar">Por cargar</string>
    <string name="por_validar">Por validar</string>
    <string name="title_dialog_gps">GPS desactivado</string>
    <string name="question_gps_turn_on">Necesita activar el GPS para continuar con la revisión</string>
</resources>
