<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actualizarRevisiones"
        android:title="@string/actualizar_revisiones_menu"
        android:icon="@mipmap/ic_descarga_catalogos"
        />

    <item
        android:id="@+id/actualizarCatalogos"
        android:title="@string/actualizar_cat_logos_tag"
        android:icon="@mipmap/ic_descarga_catalogos"
        />

    <item
        android:id="@+id/nuevaInstalacion"
        android:title="@string/nueva_instalacion_tag"
        android:icon="@mipmap/ic_nueva_instalacion"
        />

    <item
        android:id="@+id/cerrarSesion"
        android:title="@string/cerrar_sesion_menu"
        android:icon="@mipmap/ic_cerrar_sesion"
        />
    <item
        android:id="@+id/enviar_log"
        android:title="Enviar Log"
        android:visible="false"
        />
</menu>