<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/drawable_background"
        android:padding="30dp">

        <ImageView
            android:id="@+id/imageViewRegistro"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            app:srcCompat="@mipmap/ic_register" />

        <TextView
            android:id="@+id/textViewBienvenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:text="@string/registro"
            android:textColor="@color/azul"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextCorreo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/drawable_editext"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:textColor="@color/grisObscuro" />

        <Button
            android:id="@+id/buttonValidar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/drawable_button"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:textAllCaps="false"
            android:text="@string/validar"
            android:textColor="@color/blanco" />

        <EditText
            android:id="@+id/editTextContrasena"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/drawable_editext"
            android:ems="10"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:textColor="@color/grisObscuro" />

        <EditText
            android:id="@+id/editTextConfirmarContrasena"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/drawable_editext"
            android:ems="10"
            android:hint="@string/confirmarcontrasena"
            android:inputType="textPassword"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:textColor="@color/grisObscuro" />

        <Button
            android:id="@+id/buttonRegistrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/drawable_button"
            android:padding="5dp"
            android:textAllCaps="false"
            android:text="@string/registrarse"
            android:textColor="@color/blanco" />

    </LinearLayout>

</RelativeLayout>