<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registro.RestablecerContrasena">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/drawable_background"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/typhoone" />

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/restablecerContrasena"
            android:textColor="@color/azul"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editextCorreo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@color/blanco"
            android:hint="@string/correo"
            android:padding="2dp" />

        <Button
            android:id="@+id/buttonEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/enviar" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>