<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/azul"
        android:textStyle="bold"
        android:textSize="@dimen/dialog_rechazo_text_titulo_size"
        android:text="@string/motivo_de_rechazo_tag"/>

    <EditText
        android:id="@+id/editTextMotivoRechazo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_rechazo_edittext_height_size"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="top"
        android:background="@color/blanco"
        android:padding="5dp"
        android:maxLength="512"
        android:textSize="@dimen/dialog_rechazo_text_titulo_size"
        android:inputType="textNoSuggestions|textVisiblePassword"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linearLayoutCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_button_azul"
                android:layout_marginEnd="@dimen/sinc_dialog_separacion_hor_button">

                <TextView
                    android:id="@+id/buttonCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar_tag"
                    android:textSize="@dimen/sinc_dialog_text_button_size"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/sinc_dialog_margin_ver_button"
                    android:layout_marginStart="@dimen/sinc_dialog_margin_ver_button"
                    android:layout_marginTop="@dimen/sinc_dialog_margin_hor_button"
                    android:layout_marginBottom="@dimen/sinc_dialog_margin_hor_button"
                    android:textColor="@color/blanco"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_button">

                <TextView
                    android:id="@+id/buttonAceptar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aceptar_tag"
                    android:textSize="@dimen/sinc_dialog_text_button_size"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/sinc_dialog_margin_ver_button"
                    android:layout_marginStart="@dimen/sinc_dialog_margin_ver_button"
                    android:layout_marginTop="@dimen/sinc_dialog_margin_hor_button"
                    android:layout_marginBottom="@dimen/sinc_dialog_margin_hor_button"
                    android:textColor="@color/blanco"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>